infrastructure/kubernetes/multi-cluster/configs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: summit
  labels:
    name: summit
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
